About: A p5.js tropical cyclone simulation game

v20190206b:
    + Added "Hyper Mode"
        > A new option in the basin creation menu allows for a very hyperactive basin
    * Damage over $1 trillion now displays as T instead of 1000s of B
    * Storms are now named "Unnamed" after the Greek alphabet is exhausted instead of "Name #"
v20190206a:
    + Added some future-proofing for when saved environmental field analysis data is loaded in a version with an incompatible environmental field algorithm
        > The old data will be deleted and map layers will display "Unavailable" in analysis prior to the tick the basin was loaded
    * Optimized how season-crossing storms are stored for saving/loading purposes
v20190204a:
    + Added part of the season loading algorithm (still WIP)
    * "minimal" damage is now below $50 M instead of $1 M
v20190203a:
    + Added part of the season saving algorithm (still WIP)
    * Another change to how analysis environmental field data is stored to make saving/loading easier
v20190201a:
    * Various optimizations to help with saving/loading
v20190131a:
    + Added some more data compression functions for aiding in saving/loading
    * Environmental field data for analysis is now structured per-season to make loading more efficient
v20190129b:
    * Fixed graphical glitch where generating a new basin after returning to the main menu rendered the new basin's land on top of the old basin's land
    * Changed the "Back" button in the basin creation menu to a "Cancel" button in a more nice-looking position
v20190129a:
    + Added "Save* and Return to Main Menu" button in the in-sim menu
    + Added "Back" button in basin creation menu
v20190128a:
    + Added WIP menu in-sim for accessing various settings and features in upcoming updates
    * Saving/loading now checks save format number for compatibility
v20190101a:
    * Saving/loading test now autosaves partial basin data such as hemisphere and start year
v20181231a: